--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "mongoose": "^5.10.2",
     "morgan": "~1.9.1",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "xml2js": "^0.4.23"
   }
 }
